--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <header>Sign Up</header>
 
-        <form action="#">
+        <form action="https://www.instagram.com/criss_98._/">
             <div class="field email-field">
                 <div class="input-field">
                     <input type="email" placeholder="Enter your email" class="email">
